updated for college

--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -92,8 +92,8 @@
                     <h3><span class="mad">Paul</span> Ged</h3>
                     <h3>Automation</h3>
                     <p><a href="https://turbotask.co/#contact">
-                        166 Geary Street, 1670 <br>
-                        San Francisco, CA 94108<br>
+                        1540 Howard Street <br>
+                        San Francisco, CA 94122<br>
                         United States </a><br><br>
                         <strong>Phone:</strong><a href="tel:+14152121444"> +1 415 212 1444</a><br>
                         <strong>Email:</strong><a href="mailto:im@paulged.com"> im@paulged.com</a><br>
