--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,6 +105,14 @@ h6 {
   opacity: 1;
 }
 
+.avatar {
+  width: 70% !important;
+}
+
+.resume_pdf{
+  width: 30% !important;
+}
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
@@ -271,6 +279,14 @@ h6 {
   .navbar .dropdown .dropdown:hover>ul {
     left: -100%;
   }
+}
+
+.zoom{
+}
+
+.zoom:hover{
+  transition: transform 330ms ease-in-out;
+  transform: scale(1.2) !important;
 }
 
 /**
@@ -891,6 +907,10 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
+.img-icon {
+  width: 50px;
+}
+
 .services .icon-box {
   box-shadow: 0px 0 25px 0 rgba(0, 0, 0, 0.1);
   padding: 50px 30px;
