--- a/templates/index.html
+++ b/templates/index.html
@@ -381,7 +381,7 @@
                     <div class="email">
                         <i class="bi bi-envelope"></i>
                         <h4>Email:</h4>
-                        <p><a href="mailto:im@paulged.com">im@paulged.com</a></p>
+                        <p><a href="mailto:pauliusgedrimas@gmail.com">pauliusgedrimas@gmail.com</a></p>
                     </div>
                 </div>
                 <div class="phone">
