--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -96,7 +96,7 @@
                         San Francisco, CA 94122<br>
                         United States </a><br><br>
                         <strong>Phone:</strong><a href="tel:+14152121444"> +1 415 212 1444</a><br>
-                        <strong>Email:</strong><a href="mailto:im@paulged.com"> im@paulged.com</a><br>
+                        <strong>Email:</strong><a href="mailto:pauliusgedrimas@gmail.com"> pauliusgedrimas@gmail.com</a><br>
                     </p>
                 </div>
                 <div class="col-lg-3 col-md-6 footer-links">
