--- a/templates/index.html
+++ b/templates/index.html
@@ -60,48 +60,48 @@
                         </ol>
                         </p>
                     </div>
-                    <h3 class="text-center fs-4">Learn More</h3>
-                    <hr>
+<!--                    <h3 class="text-center fs-4">Learn More</h3>-->
+<!--                    <hr>-->
 
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col text-center m-4 zoom">
-                            <div class="icon-box">
-                                <div class="icon"><img
-                                        style="width:80px; padding-bottom:20px"
-                                        src="{{ url_for('static', filename='img/wrench-flat.png') }}"
-                                        alt="Skills"></div>
-                                <h4>Skills</h4>
-                            </div>
-                        </div>
-                        <div class="col  text-center m-4 zoom">
-                            <div class="icon-box"><img
-                                    style="width:80px; padding-bottom:20px"
-                                    src="{{ url_for('static', filename='img/projects.png') }}"
-                                    alt="Projects"></div>
-                            <h4>Projects</h4>
-                        </div>
-                        <div class="col  text-center m-4 zoom">
-                            <div class="icon-box"><img
-                                    style="width:80px; padding-bottom:20px"
-                                    src="{{ url_for('static', filename='img/briefcase.png') }}"
-                                    alt="Skills"></div>
-                            <h4>Work Experience</h4>
-                        </div>
-                        <div class="w-100"></div>
-                        <div class="col  text-center m-4 zoom">
-                            <div class="icon-box"><img
-                                    style="width:80px; padding-bottom:20px"
-                                    src="{{ url_for('static', filename='img/resume.png') }}"
-                                    alt="Resume"></div>
-                            <h4>Resume</h4>
-                        </div>
-                    </div>
-                </div>
+<!--                </div>-->
+<!--                <div class="container">-->
+<!--                    <div class="row">-->
+<!--                        <div class="col text-center m-4 zoom">-->
+<!--                            <div class="icon-box">-->
+<!--                                <div class="icon"><img-->
+<!--                                        style="width:80px; padding-bottom:20px"-->
+<!--                                        src="{{ url_for('static', filename='img/wrench-flat.png') }}"-->
+<!--                                        alt="Skills"></div>-->
+<!--                                <h4>Skills</h4>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="col  text-center m-4 zoom">-->
+<!--                            <div class="icon-box"><img-->
+<!--                                    style="width:80px; padding-bottom:20px"-->
+<!--                                    src="{{ url_for('static', filename='img/projects.png') }}"-->
+<!--                                    alt="Projects"></div>-->
+<!--                            <h4>Projects</h4>-->
+<!--                        </div>-->
+<!--                        <div class="col  text-center m-4 zoom">-->
+<!--                            <div class="icon-box"><img-->
+<!--                                    style="width:80px; padding-bottom:20px"-->
+<!--                                    src="{{ url_for('static', filename='img/briefcase.png') }}"-->
+<!--                                    alt="Skills"></div>-->
+<!--                            <h4>Work Experience</h4>-->
+<!--                        </div>-->
+<!--                        <div class="w-100"></div>-->
+<!--                        <div class="col  text-center m-4 zoom">-->
+<!--                            <div class="icon-box"><img-->
+<!--                                    style="width:80px; padding-bottom:20px"-->
+<!--                                    src="{{ url_for('static', filename='img/resume.png') }}"-->
+<!--                                    alt="Resume"></div>-->
+<!--                            <h4>Resume</h4>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
                 <hr>
-                <h3 class="text-center lh-lg">Recent Project<br>Google Feed Shopping Automator</h3>
+                <h3 class="text-center lh-lg"><br><br>Recent Project<br>Google Feed Shopping Automator</h3>
                 <ul>
                     <li class="lh-lg"><b><br><br>Brief</b> - Build a web based app which connects to an e-commerce
                         website API to
